﻿Version [Version Number] ([Friendly Version Number]) [Release Date]


Version vNext

Version 2.7.3 (v2.7.3 RTM)

	Bug fixes:
		-[Core] DecoratorPredicateContext.ImplementationType returned service type in case the decoratee was
		 not transient or singleton (work item 21012).


Version 2.7.2 (v2.7.2 RTM) 2015-02-12

	Bug fixes:
		-[Core] Registering collections using RegisterManyForOpenGeneric while supplying RegisterAll as 
		 callback delegate caused duplicate registrations in case a type implemented multiple closed versions
		 of the same abstraction (work item 20996).
		-[Core] Calling RegisterAll many times (i.e. in combination with RegisterManyForOpenGeneric) caused
		 severe performance problems (work item 21001).
		-[Core] The RegisterManyForOpenGeneric overloads that accepted a list of types, did not use the
		 supplied lifestyle correctly, which could cause registrations with a torn lifestyle.
		-[Core] In case the RegisterManyForOpenGeneric overloads that accepted a list of assemblies, registered
		 a type that implemented the given service type multiple times using the singleton lifestyle, it
		 became impossible to apply a decorator to this type (work item 21002).
		-[Core] RegisterAll methods behaved inconsistently with the rest of the API where they silently 
		 appended registrations to a collection when accidentally called multiple times for the same service 
		 type.

Version 2.7.1 (v2.7.1 RTM) 2015-02-01

	Bug fixes:
		-[Core] In some special cases Simple Injector was not able to resolve generic types, where one of the
		 generic type arguments was deducible from the others using the generic type constraints
		 (work item 20994).
		-[Core] Decorators that contained two parameters of different closed-generic versions of the decorated
		 interface couldn't be registered (work item 20995).
		-[Core] Resolving an unregistered concrete type failed if it was registered as part of a collection
		 (work item 21000).

