@@ -1,0 +1,30 @@
+﻿using System.Resources;
+using System.Reflection;
+using System.Runtime.CompilerServices;
+using System.Runtime.InteropServices;
+
+// General Information about an assembly is controlled through the following 
+// set of attributes. Change these attribute values to modify the information
+// associated with an assembly.
+[assembly: AssemblyTitle("SimpleInjector.Extensions.LifetimeScoping")]
+[assembly: AssemblyDescription("Lifetime Scoping extensions for the Simple Injector")]
+[assembly: AssemblyConfiguration("")]
+[assembly: AssemblyCompany("Simple Injector")]
+[assembly: AssemblyProduct("SimpleInjector.Extensions.LifetimeScoping")]
+[assembly: AssemblyCopyright("Copyright © 2013 Simple Injector Contributors")]
+[assembly: AssemblyTrademark("")]
+[assembly: AssemblyCulture("")]
+[assembly: NeutralResourcesLanguage("en")]
+
+// Version information for an assembly consists of the following four values:
+//
+//      Major Version
+//      Minor Version 
+//      Build Number
+//      Revision
+//
+// You can specify all the values or you can default the Build and Revision Numbers 
+// by using the '*' as shown below:
+// [assembly: AssemblyVersion("1.0.*")]
+[assembly: AssemblyVersion("1.0.0.0")]
+[assembly: AssemblyFileVersion("1.0.0.0")]
