@@ -3,12 +3,16 @@
 
 Version vNext
 
+
 Version 2.7.3 (v2.7.3 RTM)
 
 	Bug fixes:
 		-[Core] DecoratorPredicateContext.ImplementationType returned service type in case the decoratee was
 		 not transient or singleton (work item 21012).
 
+	Additions:
+		-LifetimeScoping project is now available as PCL package as well (work item 21013).
+			
 
 Version 2.7.2 (v2.7.2 RTM) 2015-02-12
 
